--- a/css/calendar.css
+++ b/css/calendar.css
@@ -146,8 +146,8 @@
     padding-left: 20px;
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
-    border: 1px solid #2f396d;
-    border-radius: 10px;
+    border: 1px solid #303030;
+    border-radius: 8px;
     background-color: #ffffff;
     color: #131313;
     outline: none;
