--- a/css/table.css
+++ b/css/table.css
@@ -149,6 +149,29 @@
     background-color: #98c0e4;
 }
 
+.new-action-btn {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #84b6e4;
+    border: none;
+    border-radius: 50px;
+    padding: 10px 15px 10px 20px; 
+    width: 120px;
+    color: white;
+    cursor: pointer;
+    font-size: 13px;
+    gap: 5px;
+    position: relative;
+    transition: background-color 0.3s;
+    margin: 2px;
+}
+
+.new-action-btn:hover {
+    background-color: #98c0e4;
+}
+
 .add-btn::before {
     content: "";
     position: absolute;
