--- a/css/calendar.css
+++ b/css/calendar.css
@@ -7,6 +7,7 @@
     max-width: 100%; /* Ensure it spans the container */
     overflow: hidden; /* Prevent internal elements from protruding */
     margin-bottom: 10px;;
+    height: 77%;
 }
 
 .calendar-wrapper {
